syntax = "proto3";

import "message.proto";
import "signature.proto";
option go_package = "github.com/elnosh/gonuts/cashurpc";

message PostCheckStateRequest {
  repeated string secrets = 1;
}

message PostCheckStateResponse {
  repeated States states = 1;
}
message States {
  string secret = 1;
  string state = 2;
  string witness = 3;
}